ASP.NET 网站共享 Session

--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -63,6 +63,9 @@
     </httpHandlers>
 
 
+    <!-- Session 存储到 StateServer 上. -->
+    <sessionState mode="StateServer" stateConnectionString="tcpip=localhost:42424" cookieless="UseCookies" timeout="60" />
+    
     
     <!-- 
     负载均衡时使用.
