LINQ例子代码追加 ASP.NET 共享 Session 的操作配置说明追加。

--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -67,6 +67,22 @@
     <sessionState mode="StateServer" stateConnectionString="tcpip=localhost:42424" cookieless="UseCookies" timeout="60" />
     
     
+	<!--
+	当存在有  a.test.com 与 b.test.com 需要共享 Session 的时候，增加下面的配置.
+	注意：这个仅仅在服务器上面加。
+	开发环境不要加这个。
+	
+	如果是之前浏览器先访问了 a.test.com，b.test.com。 然后发现 Session 没有共享。
+	最后才想起， 没加下面这行。
+	那么，加好之后， 需要去浏览器那里.
+	F12 观察 Cookies 中，  ASP.NET_SessionId 这个 Cookie 的域名是什么。
+	如果是 a.test.com 或者 b.test.com。
+	那么需要手动删除一下。
+	刷新页面，直至域名变更为 .test.cn 这样。 
+    <httpCookies domain="test.cn"></httpCookies>
+    -->
+	
+	
     <!-- 
     负载均衡时使用.
     Session 使用 StateServer 模式.
