--- a/B3100_XxljobClient/B3100_XxljobClient.csproj
+++ b/B3100_XxljobClient/B3100_XxljobClient.csproj
@@ -206,6 +206,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Jobs\HelloWorldJobHandler.cs" />
+    <Compile Include="Jobs\TestGetParamJobHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
