--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -149,6 +149,29 @@
       <remove statusCode="404"/>
       <error statusCode="404" path="/TestError/PageNotFound" responseMode="ExecuteURL"/>
     </httpErrors>
+
+
+
+    <!--  自定义的，添加、移除  http  header  -->
+    <httpProtocol>
+      <customHeaders>
+        
+        <add name="X-Server-Code" value="server01" />
+        
+        <remove name="Expires"/>
+        <remove name="Host"/>
+        <remove name="P3P"/>
+        <remove name="Pragma"/>
+        <remove name="Public-Key-Pins"/>
+        <remove name="Public-Key-Pins-Report-Only"/>
+        <remove name="Via"/>
+        <remove name="X-Frame-Options"/>
+        <remove name="X-Powered-By"/>
+        <remove name="X-Runtime"/>
+        <remove name="X-Version"/>
+      </customHeaders>
+    </httpProtocol>
+
   </system.webServer>
   
   
