--- a/A0662_EF_MySql_Work/A0662_EF_MySql_Work.csproj
+++ b/A0662_EF_MySql_Work/A0662_EF_MySql_Work.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\TestGroup.cs" />
+    <Compile Include="Sample\TestRowVersion2.cs" />
     <Compile Include="Sample\TestRowVersion.cs" />
     <Compile Include="Sample\TestTwoContextInSameDB.cs" />
   </ItemGroup>
