--- a/B0253_QuartzAdoJobStore/B0253_QuartzAdoJobStore.csproj
+++ b/B0253_QuartzAdoJobStore/B0253_QuartzAdoJobStore.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Jobs\HelloJob.cs" />
     <Compile Include="Jobs\PersistJob.cs" />
     <Compile Include="Jobs\RecoveryJob.cs" />
     <Compile Include="Program.cs" />
@@ -76,9 +77,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="QRTZ.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
