--- a/A0145_ChromeDriver/App.config
+++ b/A0145_ChromeDriver/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+	
+	
+  <appSettings>
+	<add key="ChromeDriver:DebuggerAddress" value="127.0.0.1:9222" />
+	<add key="ChromeDriver:Path" value="C:\Users\wangz\AppData\Local\Google\Chrome\Application\" />
+  </appSettings>
+	
 </configuration>
