--- a/A0151_Excel/A0151_Excel.csproj
+++ b/A0151_Excel/A0151_Excel.csproj
@@ -85,12 +85,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\TestData.cs" />
     <Compile Include="NpoiSample\NpoiReadExcel.cs" />
     <Compile Include="NpoiSample\NpoiWriteExcel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\Common.cs" />
     <Compile Include="Sample\CreateWriteExcel.cs" />
+    <Compile Include="Sample\ExcelDataReader.cs" />
     <Compile Include="Sample\ReadExcel.cs" />
   </ItemGroup>
   <ItemGroup>
