--- a/A0662_EF_MySql_Work/App.config
+++ b/A0662_EF_MySql_Work/App.config
@@ -21,8 +21,9 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.26.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />      
-    </providers>
+            
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider></providers>
   </entityFramework>
   
   
@@ -32,6 +33,10 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
@@ -40,10 +45,7 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" 
-           invariant="MySql.Data.MySqlClient" 
-           description=".Net Framework Data Provider for MySQL" 
-           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.26.0, Culture=neutral" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.26.0, Culture=neutral" />
     </DbProviderFactories>
   </system.data>
 
@@ -53,15 +55,11 @@
   <connectionStrings>
 
     <!-- 模拟实际工作中的一个模块. -->
-    <add name="MyWorkContext" 
-         connectionString="Server=192.168.1.86;Database=test2;Uid=root;Pwd=123456;Convert Zero Datetime=True;Allow Zero Datetime=True" 
-         providerName="MySql.Data.MySqlClient" />
+    <add name="MyWorkContext" connectionString="Server=192.168.1.86;Database=test2;Uid=root;Pwd=123456;Convert Zero Datetime=True;Allow Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
 
     
     <!-- 模拟实际工作中的另一个模块. （与上一个模块，使用相同的数据库）  -->
-    <add name="MyWork2Context"
-         connectionString="Server=192.168.1.86;Database=test2;Uid=root;Pwd=123456;Convert Zero Datetime=True;Allow Zero Datetime=True"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="MyWork2Context" connectionString="Server=192.168.1.86;Database=test2;Uid=root;Pwd=123456;Convert Zero Datetime=True;Allow Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
 
 
   </connectionStrings>
