--- a/B0250_Quartz/packages.config
+++ b/B0250_Quartz/packages.config
@@ -1,6 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.12" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Quartz" version="3.3.3" targetFramework="net461" />
+  <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net462" />
+  <package id="Google.Protobuf" version="3.25.1" targetFramework="net462" />
+  <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net462" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net462" />
+  <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net462" />
+  <package id="log4net" version="2.0.17" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.2" targetFramework="net462" />
+  <package id="MySql.Data" version="8.4.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="Quartz" version="3.13.1" targetFramework="net462" />
+  <package id="Quartz.Serialization.Json" version="3.13.1" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net462" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net462" />
 </packages>
